# mcp_security

./: .env.example  .gitignore  AGENTS.md  Dockerfile  GETTING_STARTED.md  README.md  Taskfile.yml  docker-compose-letsencrypt.yml  docker-compose.yml  project.yaml  pyproject.toml
claudedocs/: fastmcp_oauth_context.md  security_analysis_report.md
docs/: SSL_CERTIFICATES.md  SSL_ISSUE_ANALYSIS.md  SSL_TROUBLESHOOTING_JOURNEY.md  UPDATE_PLAN.md  article.md
nginx/: nginx-letsencrypt.conf  nginx.conf
reports/: AZURE_APP_REGISTRATION_SETUP.md  AZURE_FASTMCP_REMEDIATION_PLAN.md  CORRECTED_AZURE_IMPLEMENTATION_PLAN.md  DEPRECATION_REMEDIATION_PLAN.md  GRACEFUL_SHUTDOWN_ANALYSIS.md  OAUTH_PROXY_IMPLEMENTATION_COMPLETE.md  OAUTH_PROXY_IMPLEMENTATION_REPORT.md  PACKAGE_UPDATE_ANALYSIS.md  PHASE_1_IMPLEMENTATION_RESULTS.md  PROJECT_STATUS_SUMMARY.md  SCRIPT_IMPROVEMENT_SUMMARY.md  SERVER_STARTUP_FIX_REPORT.md  UPDATED_AZURE_IMPLEMENTATION_PLAN.md  WEBSOCKETS_DEPRECATION_ANALYSIS.md
scripts/: generate-local-certs.sh  init-letsencrypt.sh  run-client-with-mkcert.sh  trust-self-signed.sh  validate_oauth_implementation.py
src/: __init__.py  config.py  generate_keys.py  main.py  oauth_server.py
src/secure_clients/: README.md  __init__.py  anthropic_client.py  dspy_client.py  langchain_client.py  litellm_client.py  litellm_client_fastmcp.py  openai_client.py
src/security/: __init__.py  auth.py  jwt_verifier.py  monitoring.py  rate_limiting.py  validation.py
tests/: test_clients.py  test_security.py
